Alteração do meu HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flashcard</title>
 </head>
 <body>
-    
+    <main>
+<section id="container">
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Artes</h3>
+            <div class="cartao__conteudo__pergunta">
+                O que é Cubismo?
+            </div>
+        <div class="cartao__conteudo__resposta">
+            O cubismo é um movimento artístico que surgiu no século XX. Uma das principais características do cubismo é a representação dos objetos e das figuras humanas através de formas geométricas, como cubos, cilindros e esferas, que são desmembradas e reorganizadas em novos planos. 
+        </div>
+        </div>
+    </article>
+</section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido por Eduarda, sem fins lucrativos.</p>
+    </footer>
 </body>
 </html>
