coloquei informações sobre os cards

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Flashcard</title>
 </head>
 <body>
@@ -10,12 +13,99 @@
 <section id="container">
     <article class="cartao">
         <div class="cartao__conteudo">
-            <h3>Artes</h3>
+            <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                O que é Cubismo?
+                O que é Overwatch?
             </div>
         <div class="cartao__conteudo__resposta">
-            O cubismo é um movimento artístico que surgiu no século XX. Uma das principais características do cubismo é a representação dos objetos e das figuras humanas através de formas geométricas, como cubos, cilindros e esferas, que são desmembradas e reorganizadas em novos planos. 
+            Overwatch foi um jogo eletrônico multijogador de tiro em primeira pessoa desenvolvido e publicado pela Blizzard Entertainment. 
+        </div>
+        </div>
+    </article>
+     <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Em quais plataformas é possível jogar o jogo?
+            </div>
+        <div class="cartao__conteudo__resposta">
+            O jogo foi lançado em 24 de maio de 2016 para Microsoft Windows, PlayStation 4 e Xbox One e em 15 de outubro de 2019 para Nintendo Switch.
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Grátis para jogar.
+            </div>
+        <div class="cartao__conteudo__resposta">
+            Overwatch 1 era inicialmente um jogo pago, mas sua nova versão, o Overwatch 2, é 100% grátis para jogar sempre online com jogadores de diferentes plataformas.
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Mapas do jogo
+            </div>
+        <div class="cartao__conteudo__resposta">
+            O jogo traz uma proposta muito interessante, em que seus mapas são feitos baseados em países. Atualmente existem 30 mapas no jogo.
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Heróis
+            </div>
+        <div class="cartao__conteudo__resposta">
+            Overwatch possue atualmente 43 heróis jogáveis, sendo divididos nas categorias: tanque, dano e suporte. 
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Modos de jogo
+            </div>
+        <div class="cartao__conteudo__resposta">
+            O jogo possui atualmente 6 modos de jogo, sendo eles: controle, escolta, flashpoint, híbrido, empurrão (push) e conflito.
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Curiosidade
+            </div>
+        <div class="cartao__conteudo__resposta">
+            O persongem "Hanzo" seria um ciborgue ninja com um arco e uma espada mas, com sua grande quantidade de habilidades, foi dividido em dois personagens. Assim nasceram os irmãos Shimada, o arqueiro Hanzo e o ciborgue ninja Genji. 
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Curiosidade
+            </div>
+        <div class="cartao__conteudo__resposta">
+            O jogo se passa em uma realidade futura, com Ômnicos, seres humanos com habilidades especiais, animais com inteligência humana, etc.
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                Curiosidade
+            </div>
+        <div class="cartao__conteudo__resposta">
+           O jogo possui uma boa inclusão da comunidade LGBTQIA+. Atualmente, existem 6 personagens do jogo que fazem parte da comunidade. 
         </div>
         </div>
     </article>
