--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -15,10 +16,10 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                O que é Overwatch?
+                <p>O que é Overwatch?</p>
             </div>
         <div class="cartao__conteudo__resposta">
-            Overwatch foi um jogo eletrônico multijogador de tiro em primeira pessoa desenvolvido e publicado pela Blizzard Entertainment. 
+            <p>Overwatch foi um jogo eletrônico multijogador de tiro em primeira pessoa desenvolvido e publicado pela Blizzard Entertainment. </p> 
         </div>
         </div>
     </article>
@@ -26,10 +27,10 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Em quais plataformas é possível jogar o jogo?
+                <p>Em quais plataformas é possível jogar o jogo? </p>
             </div>
         <div class="cartao__conteudo__resposta">
-            O jogo foi lançado em 24 de maio de 2016 para Microsoft Windows, PlayStation 4 e Xbox One e em 15 de outubro de 2019 para Nintendo Switch.
+           <p> O jogo foi lançado em 24 de maio de 2016 para Microsoft Windows, PlayStation 4 e Xbox One e em 15 de outubro de 2019 para Nintendo Switch. </p>
         </div>
         </div>
     </article>
@@ -37,31 +38,20 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Grátis para jogar.
+                <p>Grátis para jogar. </p>
             </div>
         <div class="cartao__conteudo__resposta">
-            Overwatch 1 era inicialmente um jogo pago, mas sua nova versão, o Overwatch 2, é 100% grátis para jogar sempre online com jogadores de diferentes plataformas.
+            <p>Overwatch 1 era inicialmente um jogo pago, mas sua nova versão, o Overwatch 2, é 100% grátis para jogar sempre online com jogadores de diferentes plataformas.</p>
         </div>
     </article>
     <article class="cartao">
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Mapas do jogo
+               <p> Mapas do jogo</p>
             </div>
         <div class="cartao__conteudo__resposta">
-            O jogo traz uma proposta muito interessante, em que seus mapas são feitos baseados em países. Atualmente existem 30 mapas no jogo.
-        </div>
-        </div>
-    </article>
-    <article class="cartao">
-        <div class="cartao__conteudo">
-            <h3>Overwatch</h3>
-            <div class="cartao__conteudo__pergunta">
-                Heróis
-            </div>
-        <div class="cartao__conteudo__resposta">
-            Overwatch possue atualmente 43 heróis jogáveis, sendo divididos nas categorias: tanque, dano e suporte. 
+            <p>O jogo traz uma proposta muito interessante, em que seus mapas são feitos baseados em países. Atualmente existem 30 mapas no jogo.</p>
         </div>
         </div>
     </article>
@@ -69,10 +59,10 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Modos de jogo
+                <p>Heróis</p>
             </div>
         <div class="cartao__conteudo__resposta">
-            O jogo possui atualmente 6 modos de jogo, sendo eles: controle, escolta, flashpoint, híbrido, empurrão (push) e conflito.
+            <p>Overwatch possue atualmente 43 heróis jogáveis, sendo divididos nas categorias: tanque, dano e suporte. </p>
         </div>
         </div>
     </article>
@@ -80,10 +70,10 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Curiosidade
+                <p>Modos de jogo</p>
             </div>
         <div class="cartao__conteudo__resposta">
-            O persongem "Hanzo" seria um ciborgue ninja com um arco e uma espada mas, com sua grande quantidade de habilidades, foi dividido em dois personagens. Assim nasceram os irmãos Shimada, o arqueiro Hanzo e o ciborgue ninja Genji. 
+           <p> O jogo possui atualmente 6 modos de jogo, sendo eles: controle, escolta, flashpoint, híbrido, empurrão (push) e conflito.</p>
         </div>
         </div>
     </article>
@@ -91,10 +81,10 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Curiosidade
+                <p>Curiosidade</p>
             </div>
         <div class="cartao__conteudo__resposta">
-            O jogo se passa em uma realidade futura, com Ômnicos, seres humanos com habilidades especiais, animais com inteligência humana, etc.
+           <p> O persongem "Hanzo" seria um ciborgue ninja com um arco e uma espada mas, com sua grande quantidade de habilidades, foi dividido em dois personagens. Assim nasceram os irmãos Shimada, o arqueiro Hanzo e o ciborgue ninja Genji. </p>
         </div>
         </div>
     </article>
@@ -102,17 +92,28 @@
         <div class="cartao__conteudo">
             <h3>Overwatch</h3>
             <div class="cartao__conteudo__pergunta">
-                Curiosidade
+                <p>Curiosidade</p>
             </div>
         <div class="cartao__conteudo__resposta">
-           O jogo possui uma boa inclusão da comunidade LGBTQIA+. Atualmente, existem 6 personagens do jogo que fazem parte da comunidade. 
+            <p>O jogo se passa em uma realidade futura, com Ômnicos, seres humanos com habilidades especiais, animais com inteligência humana, etc.</p>
+        </div>
+        </div>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Overwatch</h3>
+            <div class="cartao__conteudo__pergunta">
+                <p> Curiosidade </p>
+            </div>
+        <div class="cartao__conteudo__resposta">
+          <p> O jogo possui uma boa inclusão da comunidade LGBTQIA+. Atualmente, existem 6 personagens do jogo que fazem parte da comunidade. </p>
         </div>
         </div>
     </article>
 </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido por Eduarda, sem fins lucrativos.</p>
+        <p>Projeto desenvolvido por Eduarda, n°6, 2°N.</p>
     </footer>
 </body>
 </html>
